--- a/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
+++ b/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
@@ -8,4 +8,7 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.143" />
+  </ItemGroup>
 </Project>
