--- a/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
+++ b/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
@@ -10,5 +10,7 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
