--- a/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
+++ b/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Network\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Network\" />
+  </ItemGroup>
 </Project>
