--- a/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
+++ b/FinalProjectTC/FinalProjectTC/FinalProjectTC.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="xunit" Version="2.5.1" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Views\Network\" />
